# piklema_test

./: .clang_complete  CMakeLists.txt  README.md  resources.qrc  test.txt
src/: main.cpp  mqtt_client.cpp  mqtt_client.hpp
src/qml/: main.qml
